apps/base/infra-zonemta/deploy/zonemta/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zonemta
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: zonemta
      app.kubernetes.io/component: server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: zonemta
        app.kubernetes.io/component: server
    spec:
      containers:
      - name: zonemta
        image: "registry.lan/zonemta:3.5.1-node-19.8.1-alpine3.17"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 1587
          name: smtp
        - containerPort: 12080
          name: metrics
        securityContext:
          runAsNonRoot: true
          runAsUser: 1000
          runAsGroup: 1000
          readOnlyRootFilesystem: true
        readinessProbe:
          tcpSocket:
            port: smtp
          initialDelaySeconds: 10
          periodSeconds: 10
        resources:
          requests:
            cpu: 25m
            memory: 160Mi
          limits:
            cpu: 100m
            memory: 160Mi
        volumeMounts:
        - name: cluster-config
          mountPath: /etc/localtime
          subPath: localtime
          readOnly: true
        - name: zonemta-config
          mountPath: /opt/zone-mta/config
        - name: zonemta-certs
          mountPath: /opt/zone-mta/certs
      volumes:
      - name: cluster-config
        configMap:
          name: cluster-config
      - name: zonemta-config
        secret:
          secretName: zonemta-config
      - name: zonemta-certs
        secret:
          secretName: zonemta-certs
      imagePullSecrets:
      - name: docker-config
      nodeSelector:
        capability/general-purpose: 'yes'
