apps/base/infra-zonemta/deploy/zonemta/service-prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: zonemta-prometheus
  labels:
    prometheus-target: zonemta
spec:
  ports:
  - port: 12080
    name: metrics
    targetPort: metrics
  selector:
    app.kubernetes.io/name: zonemta
    app.kubernetes.io/component: server
