apps/base/infra-zonemta/deploy/zonemta/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zonemta
spec:
  ports:
  - port: 587
    name: smtp
    targetPort: smtp
  selector:
    app.kubernetes.io/name: zonemta
    app.kubernetes.io/component: server
