apps/base/infra-zonemta/deploy/zonemta/networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-zonemta
spec:
  types: [Ingress]

  podSelector:
    matchLabels:
      app.kubernetes.io/name: zonemta
      app.kubernetes.io/component: server

  ingress:
    # Allow smtp from all
    - ports:
        - port: smtp
    
    # Allow metrics from Prometheus
    - ports:
        - port: metrics
      from:
        - namespaceSelector:
            matchLabels:
              name: monitoring-prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/component: prometheus
              app.kubernetes.io/instance: k8s
              app.kubernetes.io/name: prometheus
